# wolfgang-backoffice

./: .dockerignore  .env.cloud.example  .env.example  .gitignore  BACKLOG.md  BACKLOG_DETALHADO.md  BACKLOG_VNEXT_AGNO.md  BACKLOG_VNEXT_AGNO_DETALHADO.md  INDICE_BACKLOG.md  README.md  docker-compose.agent-runtime-host.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  railway.json
agent-runtime/: .coverage  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  railpack.json  railway-build.sh  railway-start.sh  railway.json  requirements.txt
agent-runtime/tests/: conftest.py  test_agno_mcp_bridge.py  test_agno_memory_factory.py  test_agno_models.py  test_agno_storage.py  test_api_lifespan.py  test_centurion_service.py  test_centurions_route.py  test_channel_adapters.py  test_criteria_engine.py  test_db_helpers.py  test_debounce_worker.py  test_egress_policy.py  test_embedding_service.py  test_fact_extractor.py  test_followup_repository.py  test_followup_service.py  test_handoff_service.py  test_health.py  test_incremental_session_summary.py  test_integration_crypto.py  test_integration_resolver.py  test_json_logging.py  test_locks_and_idempotency.py  test_logging_middleware.py  test_mcp_registry.py  test_media_services.py  test_media_tool.py  test_memory_adapters.py  test_memory_cleanup.py  test_memory_cleanup_worker.py  test_message_domain.py  test_message_handler.py  test_openai_resolver.py  test_payload_limits.py  test_proactive_handler.py  test_prompt_builder.py  test_pubsub.py  test_qualification_service.py  test_ready_checks.py  (+11 more)
(+1040 files in other folders)
