[tool.poetry]
name = "wolfgang-agent-runtime"
version = "0.1.0"
description = "Wolfgang Agent Runtime (FastAPI + Agno)"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { extras = ["standard"], version = "^0.32.1" }
httpx = "^0.27.2"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
redis = "^5.2.0"
asyncpg = "^0.30.0"
tenacity = "^9.0.0"
python-dotenv = "^1.0.1"
agno = "^2.3.13"
openai = "^2.0.0"
jsonschema = "^4.25.1"
cryptography = "^43.0.3"
prometheus-client = "^0.23.1"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-httpx = "^0.60b1"
opentelemetry-instrumentation-logging = "^0.60b1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
